# QAMPoser-physical

./: .gitignore  README.md  assets.toml  conftest.py  pyproject.toml
.github/workflows/: deploy-pocket.yml
display-app/: tsconfig.json  vite.config.ts
display-app/src/: main.tsx  styles.css
docs/: assets-design.md  booth-ux.md  design.md  dispatch.md  implementation-notes.md  iphone-capture.md  mac-booth.md  marker-ids.md  mixer.md  pocket.md  printing.md  protocol.md  quantina.md  upstream-sunset-drafts.md  upstream-wishlist.md
examples/test-boards/: README.md
hardware/: README.md  pyproject.toml
hardware/src/qamposer_hardware/: __init__.py  build.py  cli.py  export.py  face.py  pack.py  params.py
hardware/tests/: test_batches.py  test_double.py  test_geometry.py
pocket-app/: package-lock.json  package.json  tsconfig.json  vite.config.ts
pocket-app/bench/: detect_png.py  marker-bench.ts
pocket-app/public/: manifest.webmanifest
pocket-app/src/: main.tsx  vite-env.d.ts
pocket-app/tests/: cameraDevices.test.ts  circuitBuilder.test.ts  dictionary.test.ts  displayWires.test.ts  editorFit.test.ts  fullscreen.test.ts  hashNav.test.ts  matDetect.test.ts  matStream.test.ts  resultsHistogram.test.ts  robustness.test.ts  settings.test.ts  testBoards.test.ts  viewer.test.ts
shared/: tokens.css
shared/capture/: matRoi.test.ts  matRoi.ts
shared/display/: Celebrations.tsx  Histogram.tsx  MessageStrip.tsx  QasmPanel.tsx  (+13 more)
tests/: __init__.py  test_pocket_dictionary_parity.py
tools/: extract_noise_presets.py  gen_noise_fixtures.py  make_example_boards.py
(+126 files in other folders)
